--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.8.4",
     "vue": "^3.5.13",
+    "vue-yandex-maps": "^2.1.4",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
