--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.8.4",
     "vue": "^3.5.13",
     "vue-yandex-maps": "^2.1.4",
+    "vue3-toastify": "^0.2.8",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
