--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.8.4",
+    "cleave.js": "^1.6.0",
     "vue": "^3.5.13",
     "vue-yandex-maps": "^2.1.4",
     "vue3-toastify": "^0.2.8",
